--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@tailwindcss/forms": "^0.5.10",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
